welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:52: error: not found: value faireTotale
faireTotale() {
^